--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
-						</header>
-						<p>Dedicated and aspiring developer with an unswerving work ethic and outstanding technical skills. Received a B.A. in Computational Mathematics at UC Santa Cruz. Experience with React/Redux, Ruby on Rails, Javascript, HTML, CSS and Postgres SQL.</p>
+						<p>Dedicated software developer with an unswerving work ethic and outstanding technical skills. Received a B.A. in Computational Mathematics at UC Santa Cruz. Experience with React/Redux, Ruby on Rails, Javascript, HTML, CSS and Postgres SQL.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -44,17 +41,17 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="https://quorums.herokuapp.com/"><img src="images/fulls/question-index.png" alt="" class="image fit"/></a>
+								<a href="https://quorums.herokuapp.com/"><img src="images/fulls/question-splash.png" alt="" class="image fit"/></a>
 								<h3>Quorums</h3>
 								<p>Question and Answer site</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://colinritchey.github.io/Missile-Command-Typing/"><img src="images/fulls/missile-command.png" alt="" class="image fit"/></a>
+								<a href="https://colinritchey.github.io/Missile-Command-Typing/"><img src="images/fulls/missile-command-2.png" alt="" class="image fit"/></a>
 								<h3>Missile Command Typing</h3>
 								<p>Missile Command with a typing twist</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/03.jpg"><img src="images/thumbs/03.jpg" alt="" class="image"/></a>
+								<a href="https://colinritchey.github.io/PlantShareDemo/"><img src="images/fulls/plantshare-index.png" alt="" class="image fit"/></a>
 								<h3>PlantShare</h3>
 								<p>Networking app that allows the distribution of plants</p>
 							</article>
@@ -427,9 +424,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+						<li><a href="https://www.linkedin.com/in/colin-ritchey-38205a70" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/colinritchey" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 						<li><a href="colinritchey256@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
