--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 					<section id="one">
 						<header class="major">
 						<p>Dedicated software developer with an unswerving work ethic and outstanding technical skills. Received a B.A. in Computational Mathematics at UC Santa Cruz. Experience with React/Redux, Ruby on Rails, Javascript, HTML, CSS and Postgres SQL.</p>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Two -->
@@ -66,9 +66,9 @@
 								<p>Networking app that allows the distribution of plants</p>
 							</article>
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
@@ -92,7 +92,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										Oaklnad, CA 94610<br />
+										Oakland, CA 94610<br />
 										United States
 									</li>
 									<li>
